Fix overflow

--- a/frontend/src/metabase/dashboard/components/DashboardHeader/DashboardHeaderView.module.css
+++ b/frontend/src/metabase/dashboard/components/DashboardHeader/DashboardHeaderView.module.css
@@ -126,6 +126,7 @@
   font-size: 1.25rem;
   font-weight: 700;
   line-height: 1.5rem;
+  max-width: 100%;
   overflow-wrap: break-word;
 }
 
